# btc-alert-bot

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: alert.yml
data/: fred_cache.json  history.sqlite  macro_cache.json  state.json
scripts/: test_discord.py
src/btc_alert_bot/: __init__.py  analyzers.py  chart.py  deribit.py  detector.py  features.py  fred.py  grok_search.py  history.py  main.py  market.py  milestones.py  price.py  publishers.py  realtime.py  summarizer.py  whale_monitor.py  x_list_monitor.py  x_monitor.py
src/jp_translator/: config.py
tests/: test_bear_zone.py  test_features_rolling.py  test_realtime_replay.py  test_ytd_oneshot.py
